--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,9 @@
 <html>
     <body>
+        <head>
+        <title></title>
+        <link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
+        </head>
         <header>
             <img id ="logo" src="https://mars.algoritmika.org/uploads/2020/12/logo_0_1607675596.svg" height="40px"/>
             <b>Внимание! Сезонные скидки 40% </b><a href="#discount">Подробнее</a>
